[package]
name = "safe_join"
version = "0.1.0"
edition = "2018"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/safe_join/"
repository = "https://github.com/trailofbits/safe_join"
description = "To help prevent directory traversal attacks"

[dependencies]
camino = { version = "1.0.5", optional = true }

[features]
default = []
