[package]
name = "safe_path"
version = "0.1.0"
edition = "2018"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/safe_path/"
repository = "https://github.com/trailofbits/safe_path"
description = "To help prevent directory traversal attacks"

[dependencies]
camino = { version = "1.0.5", optional = true }
serde = { version = "1.0.131", optional = true }
test-fuzz = { version = "2.0.0", optional = true }

[dev-dependencies]
cargo-util = "0.1.1"
lexiclean = "0.0.1"
path-clean = "0.1.0"

[features]
fuzz = [ "serde", "test-fuzz" ]
